--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         <div id="border-color2" class="half-width shadow-effect">
             <h1>Baby Web Developer</h1>
             <h2 class="name-color">2020-2021 | Programming Hero Learner</h2>
-            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working in VS Code Studio.</p>
         </div>
        
     </section>
     <br>
     <br>
     <footer>
-        <p>© Peter Parker 2021, All Rights Reserved.</p>
+        <p>© Zahidul Hassan 2022, All Rights Reserved.</p>
     </footer>
     
 
